force-app/main/default/objects/Party__c/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <description>Country where the organisation is incorporated.</description>
    <label>Country of Incorporation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>