force-app/main/default/objects/Party__c/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <description>Country where the party is resident.</description>
    <label>Country of Residence</label>
    <length>80</length>
    <type>Text</type>
</CustomField>