force-app/main/default/objects/Party__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Date of birth for individual parties.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>