force-app/main/default/objects/Party__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the party.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>