force-app/main/default/objects/Party__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of individual party.</description>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>