force-app/main/default/objects/Party__c/fields/Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name__c</fullName>
    <description>Full legal name as shown on ID or incorporation documents.</description>
    <label>Full Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>