force-app/main/default/objects/Party__c/fields/Government_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Number__c</fullName>
    <description>Government identification number (passport, ID card, or registration).</description>
    <label>Government ID Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>