force-app/main/default/objects/Party__c/fields/Is_PEP__c.field-meta.xml
<CustomField>
    <fullName>Is_PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the party is a politically exposed person.</description>
    <label>Is PEP</label>
    <type>Checkbox</type>
</CustomField>