force-app/main/default/objects/Party__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of individual party.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>