force-app/main/default/objects/Party__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>Registered legal name of a corporate entity.</description>
    <label>Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>