force-app/main/default/objects/Party__c/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <description>Legal form of the organisation (Corporation, LLC, etc.).</description>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>