force-app/main/default/objects/Party__c/fields/Linked_Account__c.field-meta.xml
<CustomField>
    <fullName>Linked_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account created from this party when the onboarding application is approved.</description>
    <label>Linked Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <type>Lookup</type>
</CustomField>