force-app/main/default/objects/Party__c/fields/Linked_Contact__c.field-meta.xml
<CustomField>
    <fullName>Linked_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact created from this party when the onboarding application is approved.</description>
    <label>Linked Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parties (as Contacts)</relationshipLabel>
    <relationshipName>Parties_As_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>