force-app/main/default/objects/Party__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Middle name(s) of individual party.</description>
    <label>Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>