force-app/main/default/objects/Party__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile phone number of the party.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>