force-app/main/default/objects/Party__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Nationality of the individual or primary country for the entity.</description>
    <label>Nationality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>