force-app/main/default/objects/Party__c/fields/Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Type__c</fullName>
    <description>Distinguishes people from legal entities in onboarding (Individual vs Organisation).</description>
    <label>Party Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>