force-app/main/default/objects/Party__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Alternative phone number of the party.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>