force-app/main/default/objects/Party__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <description>Company registration or equivalent identifier.</description>
    <label>Registration Number / Company Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>