force-app/main/default/objects/Party__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>Name suffix (Jr, Sr, III, etc.).</description>
    <label>Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>