force-app/main/default/objects/Party__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website URL for organisation parties.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>