force-app/main/default/objects/Party__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Party_Type__c</columns>
    <columns>Full_Legal_Name__c</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Is_PEP__c</columns>
    <columns>Email__c</columns>
    <columns>Linked_Account__c</columns>
    <columns>Linked_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>